{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 45,
  "lineage": "d5ab3ca1-9381-99b5-2588-671c5a135e2f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ecs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643965772771:vpc/vpc-08f63d60f729c7e99",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ae94c78bc0280405",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0dbe7e4747fe4cb07",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f63d60f729c7e99",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0376da508cd40d429",
            "owner_id": "643965772771"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:loadbalancer/app/ecs-load-balancer/a068c95dd8102a02",
            "arn_suffix": "app/ecs-load-balancer/a068c95dd8102a02",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-load-balancer-478043299.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:643965772771:loadbalancer/app/ecs-load-balancer/a068c95dd8102a02",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09121b79abc289019"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c52c6d26b52567e"
              },
              {
                "subnet_id": "subnet-05f2a9e0eff9f62ad"
              },
              {
                "subnet_id": "subnet-07c32f7ad491dbacd"
              },
              {
                "subnet_id": "subnet-08060bd1dc12db420"
              },
              {
                "subnet_id": "subnet-0bcdfa1cf388526b2"
              },
              {
                "subnet_id": "subnet-0ce7a7eef18291185"
              }
            ],
            "subnets": [
              "subnet-03c52c6d26b52567e",
              "subnet-05f2a9e0eff9f62ad",
              "subnet-07c32f7ad491dbacd",
              "subnet-08060bd1dc12db420",
              "subnet-0bcdfa1cf388526b2",
              "subnet-0ce7a7eef18291185"
            ],
            "tags": {
              "Environment": "development"
            },
            "tags_all": {
              "Environment": "development"
            },
            "vpc_id": "vpc-08f63d60f729c7e99",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-loadbalancer",
            "data.aws_subnets.mysubnets",
            "data.aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:listener/app/ecs-load-balancer/a068c95dd8102a02/a1d2643cbe0bb884",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:targetgroup/ecs-target-group/5c66712a5ca03b73",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:643965772771:listener/app/ecs-load-balancer/a068c95dd8102a02/a1d2643cbe0bb884",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:loadbalancer/app/ecs-load-balancer/a068c95dd8102a02",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs-load-balancer",
            "aws_lb_target_group.ecs-targetGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:listener/app/ecs-load-balancer/a068c95dd8102a02/f35d7d40b788992a",
            "certificate_arn": "arn:aws:acm:us-east-1:643965772771:certificate/3d5f2d56-9557-4c33-b470-9e6d4a28253c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:targetgroup/ecs-target-group/5c66712a5ca03b73",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:643965772771:listener/app/ecs-load-balancer/a068c95dd8102a02/f35d7d40b788992a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:loadbalancer/app/ecs-load-balancer/a068c95dd8102a02",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs-load-balancer",
            "aws_lb_target_group.ecs-targetGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-targetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:643965772771:targetgroup/ecs-target-group/5c66712a5ca03b73",
            "arn_suffix": "targetgroup/ecs-target-group/5c66712a5ca03b73",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:643965772771:targetgroup/ecs-target-group/5c66712a5ca03b73",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08f63d60f729c7e99"
          },
          "dependencies": [
            "data.aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643965772771:security-group/sg-09121b79abc289019",
            "description": "Security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09121b79abc289019",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecs-lb-securityGroup",
            "name_prefix": "",
            "owner_id": "643965772771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LoadBalancer-sg"
            },
            "tags_all": {
              "Name": "LoadBalancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f63d60f729c7e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643965772771:security-group/sg-080105d171582de9b",
            "description": "Security group for task/service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080105d171582de9b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "all ports open for load balancer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09121b79abc289019"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ecs-task-securityGroup",
            "name_prefix": "",
            "owner_id": "643965772771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Task-sg"
            },
            "tags_all": {
              "Name": "Task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f63d60f729c7e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-loadbalancer",
            "data.aws_vpc.ecs-vpc"
          ]
        }
      ]
    }
  ]
}